tests/tooling/fixtures/native/execution/positive/do_while_body_return_accept.objc3
module DoWhileBodyReturnAccept;

fn main() -> i32 {
  do {
    return 42;
  } while (false);
}
