tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_after_name_fn_extern.objc3
module MisplacedQualifierAfterNameFnExtern;

fn add extern(lhs: i32, rhs: i32) -> i32;

fn main() -> i32 {
  return 0;
}
